static/css/base.css
/* https://coolors.co/6441a4-574ae2-222a68-2c2f33-ab81cd */

html {
  font-family: 'Montserrat', sans-serif;
  color: #ffffff;
  background-color: #2C2F33;
}

body {
  margin: 0;
}

header {
  height: 500px;
  text-align: center;
  color: #f1fffa;
  display: table-cell;
  width: 100vw;
  vertical-align: middle;
}

nav {
  display: flex;
  justify-content: flex-end;
  height: inherit;
  line-height: 60px;
  background-color: #4b367c;
  padding: 0 20px 0 20px;
  color: #ffffff;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

nav > section {
  width: 33%;
}

nav > section > a {
  padding-right: 10px;
}

a {
  text-decoration: none;
  color: inherit;
}

main {
  margin: 10px;
  overflow-wrap: break-word;
}

a:hover {
  color: #b5b5b5;
}

.headers {
  width: 30%;
  margin: 20px auto;
  padding: 0px 20px 20px 20px;
  margin-right: 50px;
  background-color: #6441a4;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.subSection {
  margin: 2px auto;
  margin-bottom: 20px;
  padding: 10px 20px 20px 20px;
  background-color: #555555;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  width: 30%;
  min-height: 400px;
}

.left {
  float: left;
}

.right {
  float: right;
  text-align: right;
}

.center {
  text-align: center;
  margin: 0 auto;
}

.smallH {
  margin-bottom: -10px;
}

.icon {
  margin: 2px;
  margin-left: 5px;
  min-width: 18px;
}

.message {
  padding: 5px;
  font-size: 16px;
  display: flex;
  align-items: center;
  margin-left: -10px;
  width: calc(100% + 10px);
}

.message:nth-child(odd) {
  background-color: #212121;
}

#frontPage {
  display: flex;
  flex-wrap: wrap;
}

#userHeader {
  display: flex;
}

#userHeaderInfo {
  text-align: center;
}

#infoSection {
  width: 70%;
}

@media only screen and (max-width: 1050px) {
  #profileImg {
    width: 100%;
  }
}

@media only screen and (max-width: 800px) {
  nav {
    display: block;
    text-align: center;
  }

  nav > section {
    width: 100%;
  }

  #userHeader {
    display: block;
  }

  .headers {
    padding-top: 5px;
    margin-right: 0;
    width: calc(100% - 40px);
  }
}

